# python-application

./: ASSIGNMENT_REPORT.md  Dockerfile  README.md  entrypoint.sh  k3d-config.yaml  k3d-lb-values.yaml  pyproject.toml
app/: database.py
wiki-chart/: Chart.yaml  values.yaml
wiki-chart/templates/: configmap-grafana-dashboard.yaml  configmap-grafana-provisioning.yaml  configmap-prometheus.yaml  deployment-api.yaml  deployment-grafana.yaml  deployment-prometheus.yaml  ingress.yaml  service-api.yaml  service-grafana.yaml  service-postgres.yaml  service-prometheus.yaml  statefulset-postgres.yaml
wiki-service/: Dockerfile  pyproject.toml  test_api.sh
wiki-service/app/: database.py  main.py
